# kimi-cli

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  system_prompt.txt
src/: __init__.py
src/commands/: __init__.py  base.py  context_commands.py  file_commands.py  system_commands.py
src/core/: __init__.py  config.py  session.py
src/tools/: __init__.py  base.py  file_tools.py  shell_tools.py
src/ui/: __init__.py  console.py  formatters.py
src/utils/: __init__.py  file_utils.py  path_utils.py  shell_utils.py  text_utils.py
tests/: __init__.py  conftest.py  test_imports.py  test_improvements.py
tests/test_core/: __init__.py  test_config.py
tests/test_utils/: __init__.py  test_path_utils.py
